Input check and exception class; impelemntation of constructors have been moved to cpp file now emptyLanguage returns grammar with S axiom all the time

--- a/ContextFreeGrammar/ContextFreeGrammar.vcxproj
+++ b/ContextFreeGrammar/ContextFreeGrammar.vcxproj
@@ -130,9 +130,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CFG.h" />
+    <ClInclude Include="Exception.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CFG.cpp" />
+    <ClCompile Include="Exception.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
