--- a/ContextFreeGrammar/ContextFreeGrammar.vcxproj.filters
+++ b/ContextFreeGrammar/ContextFreeGrammar.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="CFG.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Exception.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CFG.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Source.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Exception.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
