--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /ContextFreeGrammar/x64/Debug
 /UnitTest/x64/Debug
 /x64/Debug
+/UnitTest/x64/Release
+/x64/Release
+/ContextFreeGrammar/x64/Release
