--- a/ContextFreeGrammar/ContextFreeGrammar.vcxproj.filters
+++ b/ContextFreeGrammar/ContextFreeGrammar.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="DFA.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CLexerms.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CFG.cpp">
