--- a/ContextFreeGrammar/ContextFreeGrammar.vcxproj.filters
+++ b/ContextFreeGrammar/ContextFreeGrammar.vcxproj.filters
@@ -48,4 +48,12 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="simpleProgram.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="simpleProgramOutput.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
