--- a/ContextFreeGrammar/ContextFreeGrammar.vcxproj
+++ b/ContextFreeGrammar/ContextFreeGrammar.vcxproj
@@ -131,15 +131,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CLexerms.h" />
+    <ClInclude Include="CLexems.h" />
     <ClInclude Include="CFG.h" />
-    <ClInclude Include="DFA.h" />
+    <ClInclude Include="Lexer.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="Token.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CFG.cpp" />
-    <ClCompile Include="DFA.cpp" />
+    <ClCompile Include="Lexer.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Token.cpp" />
